# fabrknt-sdk

./: .gitignore  README.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  test-coverage.yml
core/: .eslintrc.json  .github-org-profile.md  .github-org-setup-instructions.md  .gitignore  .npmignore  BUSINESS_PLAN.md  CHANGELOG.md  CONTRIBUTING.md  KNOWN_LIMITATIONS.md  README.md  package-lock.json  package.json  vitest.config.ts
core/docs/: CHAIN_ABSTRACTION.md  COVERAGE_ANALYSIS.md  GUARD.md  NPM_PUBLICATION.md  PATTERNS.md  PRIVACY.md  RISK.md  concepts.md  getting-started.md  installation.md
core/examples/: README.md  guard-basic.ts  guard-patterns.ts  risk-privacy-integration.ts
core/src/: index.ts
core/tests/: chain-adapter.test.ts  chain-errors.test.ts  chain-index.test.ts  detector.test.ts  dex-integration.test.ts  evm-networks.test.ts  fabric.test.ts  fabrknt.test.ts  financial-patterns.test.ts  guard-detector.test.ts  guard-evm-detector.test.ts  guard-validator.test.ts  guard.test.ts  index.test.ts  integration.test.ts  loom.test.ts  privacy-fabric.test.ts  (+2 more)
docs/: AMPLIFY_SETUP.md  AWS_ARCHITECTURE.md  AWS_SETUP.md  SETUP_CHECKLIST.md
flow/: Anchor.toml  README.md  SETUP_COMPLETE.md
flow/programs/flow/: Cargo.toml
flow/programs/flow/src/: lib.rs
guard/: .gitignore  BIZPLAN.md  Cargo.toml  README.md
guard/src/: detector.rs  main.rs
loom/: README.md  tech-spec.md
privacy/: DEMO.md  PHASE2.md  README.md  SETUP.md  package.json
risk/: Anchor.toml  Cargo.toml  PROJECT_STRUCTURE.md  README.md  package-lock.json  package.json
(+145 files in other folders)
