[package]
name = "guard"
version = "0.1.0"
edition = "2021"

[dependencies]
# Solana SDK
solana-client = "1.18"
solana-sdk = "1.18"
solana-transaction-status = "1.18"

# SPL Token
spl-token = "4.0"
spl-token-2022 = "1.0"

# Async runtime
tokio = { version = "1.41", features = ["full"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# HTTP client for Discord webhook
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
env_logger = "0.11"
log = "0.4"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Colors for terminal output
colored = "2.1"
